--- a/project/package.json
+++ b/project/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "build": "node esbuild.mjs",
+    "start": "npm run build && node dist/index.js",
+    "dev": "tsx src/index.ts",
     "test": "npx vitest",
     "format": "npx prettier --write src",
     "prepare": "husky"
@@ -29,12 +29,14 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.6.2",
     "commitlint": "^20.1.0",
+    "esbuild": "^0.25.11",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0",
     "vitest": "^3.2.4"
