--- a/project/package.json
+++ b/project/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "node esbuild.mjs",
-    "start": "npm run build && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "test": "npx vitest",
     "format": "npx prettier --write src",
